unpackaged/main/default/objects/litify_fin__lit_Global_Settings__c/litify_fin__lit_Global_Settings__c.object-meta.xml
<CustomObject>
    <description>Contains the global settings for the financial summary.</description>
    <label>Global Settings</label>
    <nameField>
        <label>Global Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Settings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>