unpackaged/main/default/objects/litify_fin__lit_Global_Settings__c/fields/litify_fin__Criteria_Field__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__Criteria_Field__c</fullName>
    <description>The API name of the field on the master object which will be used to determine the object type.</description>
    <label>Criteria Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>