unpackaged/main/default/objects/litify_fin__lit_Global_Settings__c/fields/litify_fin__lit_Enable_Ledger__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Enable_Ledger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Ledger</label>
    <type>Checkbox</type>
</CustomField>