unpackaged/main/default/objects/litify_fin__lit_Global_Settings__c/fields/litify_fin__lit_Group_Transactions__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Group_Transactions__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag to determine if users will be able to group transactions with the same Payee and Account into a single transaction (Litify Transaction object only).</description>
    <label>Group Transactions</label>
    <type>Checkbox</type>
</CustomField>