unpackaged/main/default/objects/litify_fin__lit_Global_Settings__c/fields/litify_fin__lit_Transaction_Account_Source__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Transaction_Account_Source__c</fullName>
    <description>The API name of the field on the transaction object that defines the Account Source. Must be a picklist field.</description>
    <label>Transaction Account Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>