unpackaged/main/default/objects/litify_fin__lit_Global_Settings__c/fields/litify_fin__lit_Transaction_Master_Object_Lookup__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Transaction_Master_Object_Lookup__c</fullName>
    <description>The API name of the field on the transaction object that looks up to the master object.</description>
    <label>Transaction Master Object Lookup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>