unpackaged/main/default/objects/litify_fin__lit_Global_Settings__c/fields/litify_fin__lit_Transaction_Object__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Transaction_Object__c</fullName>
    <description>The API name of the transaction object. ex: litify_fin__lit_Transaction__c</description>
    <label>Transaction Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>