unpackaged/main/default/objects/litify_fin__lit_Global_Settings__c/fields/litify_fin__lit_Transaction_Summary_Field__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Transaction_Summary_Field__c</fullName>
    <description>The API name of the field on the transaction object that defines the summary field.</description>
    <label>Transaction Summary Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>