unpackaged/main/default/objects/litify_fin__lit_Global_Settings__c/fields/litify_fin__lit_Transaction_Type_Field__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Transaction_Type_Field__c</fullName>
    <description>The API name of the field on the transaction object that defines transaction type (credit or debit).</description>
    <label>Transaction Type Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>