unpackaged/main/default/objects/litify_fin__lit_Global_Settings__c/fields/litify_fin__Master_Object__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__Master_Object__c</fullName>
    <description>The API name of the master object. ex: litify_pm__Matter__c</description>
    <label>Master Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>